# aliexpress-clone

./: .gitignore  Api_responses.py  README.md  automate_everything.py  data.json  data.txt  dev.yaml  docker-compose.observability.yml  request_api.py  run_servers.py  schoole.txt  tomorrow_steps.md  update.txt
aliexpress-api/: .env_example.txt  Menu.py  README.md  pyproject.toml  todo.md
aliexpress-api/aliexpressapi/: .env.example  Menu.py  auto_remove.py  full_fixture.json  generate_full_fixtures.py  homepage_data.json  main.py  manage.py  product_schema.dot  pyproject.toml  requirements.txt  schema.dot  setup.py
aliexpress-api/aliexpressapi/Fixtures/: Notes.txt  homepage_fixture.json  products_fixture.json
aliexpress-api/aliexpressapi/Schemas/: database_design_dbdiagram.io  product_schema.dot  schema.dot
aliexpress-api/aliexpressapi/aliexpressapi/: asgi.py  settings.py  urls.py
aliexpress-api/aliexpressapi/apps/: views.md
aliexpress-api/aliexpressapi/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
aliexpress-api/aliexpressapi/apps/carts/: admin.py  contracts.py  errors.py  models.py  serializers.py  urls.py  views.py
aliexpress-api/aliexpressapi/components/: health.py
aliexpress-api/aliexpressapi/configs/: asgi.py  base.py  dev.py  prod.py  urls.py  wsgi.py
aliexpress-api/aliexpressapi/design patterns/: accounts_searvice_design.md  aliexpress_clone.md  order_service_design.md  payment_service_design.md  search_service_design.md  shipping_&_logistics_service_design.md
aliexpress-api/aliexpressapi/md_files/: api_wireframes.md  auth_md.md  products_md.md  suggestions.md
aliexpress-api/aliexpressapi/requirements/: dev.txt
aliexpress-api/docs/: README.md  contracts-and-evolution.md  module-design.md  operations.md  source-notes.md
docs/: README.md  (+1 more)
(+453 files in other folders)
